--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,9 @@
   text-align: center;
   background-color: rgb(129, 60, 2);
   color: aliceblue;
+  box-shadow: 3px 3px 1px rgba(0, 0, 0, .05);
   padding: 1em;
+  margin-bottom: 1em;
 }
 
 .header > h1 {
@@ -11,12 +13,15 @@
 
 .main {
   display: flex;
-  background-color: antiquewhite;
-  padding: 14em 3em;
+  flex-flow: row wrap;
+  margin: 25em 2em;
+  justify-content: center;
+  align-items: center;
 }
 
 .main div {
   flex: 1;
+  margin-bottom: 3em;
 }
 
 .footer {
@@ -34,7 +39,7 @@
 
 .token-form div {
   display: flex;
-  padding: 1em;
+  padding: 0.5em;
   font-size: 1.5em;
   justify-content: center;
 }
@@ -47,4 +52,23 @@
   width: 40%;
   padding: 0.75em;
   border-radius: 1em;
+}
+
+.token-list {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+}
+
+.token-list > li {
+  padding: 1em;
+}
+
+.token-list ul {
+  padding: 1em;
+  border: 0.2em black solid;
+  border-radius: 1em;
+}
+
+.token-list > li li {
+  padding: 0.2em;
 }
