--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,23 @@
-body {
+*, *:after, *:before {
+  box-sizing: border-box;
+  padding: 0;
   margin: 0;
+}
+
+ul {
+  list-style: none;
+}
+
+h1, h2, h3, h4, h5, h6 {
+  font-family: 'Playfair Display';
+  font-weight: normal;
+  letter-spacing: 1px;
+}
+
+body {
+  font-family: 'Open Sans', arial, sans-serif;
+  font-size: 14px;
+  line-height: 1;
+  color: #373737;
+  background-color: #f7f7f7;
 }
